[gd_scene load_steps=16 format=3 uid="uid://b51f2vyidut4p"]

[ext_resource type="Texture2D" uid="uid://bxf8objhvmxog" path="res://assets/images/areas/wardrobe/clothingBox.png" id="1_q1k30"]
[ext_resource type="Script" path="res://technical/clothing_object.gd" id="2_0njxn"]
[ext_resource type="Texture2D" uid="uid://dw8ygvkl5r3ws" path="res://assets/images/areas/wardrobe/clothing/base.png" id="2_facdx"]
[ext_resource type="Theme" uid="uid://dr1wna4c2ab2h" path="res://technical/textStyle.tres" id="3_jjocx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hv8o4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dqwnt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n3cjy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_amtnb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gkxjh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0e7pr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_32j7f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5c2su"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5mf3q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j7kxe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nqc31"]

[node name="ClothingObject" type="TextureRect"]
texture = ExtResource("1_q1k30")
script = ExtResource("2_0njxn")

[node name="Clothing" type="Sprite2D" parent="."]
position = Vector2(76, 59)
texture = ExtResource("2_facdx")

[node name="Cost" type="Label" parent="Clothing"]
offset_left = -76.0
offset_top = 51.0
offset_right = 75.0
offset_bottom = 81.0
scale = Vector2(1, 0.6)
theme = ExtResource("3_jjocx")
theme_override_colors/font_color = Color(0.231373, 0.0862745, 0.0784314, 1)
theme_override_colors/font_outline_color = Color(1, 0.686275, 0.501961, 1)
theme_override_font_sizes/font_size = 26
text = "COST"
horizontal_alignment = 1
clip_text = true

[node name="button" type="Button" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 173.0
offset_bottom = 157.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_hv8o4")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_dqwnt")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_n3cjy")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_amtnb")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_gkxjh")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_0e7pr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_32j7f")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_5c2su")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5mf3q")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_j7kxe")
theme_override_styles/normal = SubResource("StyleBoxEmpty_nqc31")

[connection signal="mouse_entered" from="button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
